converts project to TS

--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "server_mentis",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "serve": "nodemon server.js",
+    "serve": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit push"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "module",
-  "description": "",
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.0.3",
@@ -23,7 +20,7 @@
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.30.2",
-    "drizzle-orm": "^0.38.4"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
