--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server_mentis",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "serve": "nodemon src/server.ts",
     "build": "tsc",
@@ -8,18 +9,21 @@
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit push"
   },
-  "type": "module",
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.0.3",
     "@fastify/rate-limit": "^10.2.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.4",
+    "envalid": "^8.0.0",
     "fastify": "^5.2.1",
-    "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9"
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^22.10.10",
+    "nodemon": "^3.1.9",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
