--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@fastify/jwt": "^9.0.3",
     "@fastify/rate-limit": "^10.2.2",
     "bcrypt": "^5.1.1",
+    "chalk": "^5.4.1",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
-    "envalid": "^8.0.0",
     "fastify": "^5.2.1",
     "mysql2": "^3.12.0"
   },
