--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,16 @@
-DB_HOST=host
-DB_PORT=port
-DB_USERNAME=username
-DB_PASSWORD=pass
-DB_NAME=db_name
 
+# Server configuration
 PORT=7000
+RATE_LIMIT_MAX=100
+RATE_LIMIT_TIME_WINDOW=1 minute
 
-JWT_SECRET=secret
-COOKIE_SECRET=secret
+# JWT and Cookie secrets
+JWT_SECRET=your_jwt_secret_here
+COOKIE_SECRET=your_cookie_secret_here
+
+# Database configuration
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=your_db_password_here
+DB_NAME=mentis
