--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "chalk": "^5.4.1",
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.2",
     "drizzle-orm": "^0.38.4",
     "fastify": "^5.2.1",
     "mysql2": "^3.12.0"
