--- a/.env_example
+++ b/.env_example
@@ -9,8 +9,5 @@ JWT_SECRET=your_jwt_secret_here
 COOKIE_SECRET=your_cookie_secret_here
 
 # Database configuration
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=your_db_password_here
-DB_NAME=mentis
+DATABASE_URL=
+
