--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "bcrypt": "^5.1.1",
     "chalk": "^5.4.1",
     "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.30.2",
     "drizzle-orm": "^0.38.4",
     "fastify": "^5.2.1",
-    "mysql2": "^3.12.0"
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.10.10",
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.2",
     "nodemon": "^3.1.9",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
