--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "rootDir": "./src",
     "removeComments": true,
     "noEmitOnError": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
