--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "serve": "nodemon src/server.ts",
-    "build": "tsc",
+    "build": "tsx",
     "start": "node dist/server.js",
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit push"
